# Megatron-LM-AutoTuner

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_verl.txt  setup.py
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.secrets/: env_sample.sh
AutoTuner/runtime/: __init__.py
AutoTuner/utils/: batch.py  config.py  distributed.py  gpu_info.py  hidden_status_gen.py  memory.py  memory_snapshots.py  model_inputs.py  nested_dict.py  pack_sequence.py  parallel_ssh.py  structs.py  timing.py  tp_overlap.py
AutoTunner/utils/: config.py  distributed.py  logging.py  memory.py  models.py  nvtx.py  pack_sequence.py  structs.py  timing.py
docker/cu126/: Dockerfile
docker/cu128/: Dockerfile
docs/: Install.md  QuickStart.md  design.md  tools.md
patches/: TransformerEngine.patch
scripts/: analyze_profile_results.py  aria2c_robust.sh  docker_robust_pull.sh  download_model_configs.sh  format.sh  install_in_docker.sh  process_pretrain_data.sh  start_docker.sh
scripts/tp_overlap_tuner/: analyze_results.sh  profile_single_config.sh  run_tuner.sh
testbench/: cpu_gpu_movement.py
tests/functional_test/: README.md  test_env.sh  test_env_sample.sh  testbench_collect_data.sh  testbench_nsys_profile.sh  testbench_prof.sh  testbench_torch_memory_snapshot.sh  testbench_torch_profile.sh
tests/runtimes/: run_baseline.sh
tests/trial/: test_inheritence.py  test_torchcomm.py
tools/: generate_embed_mem_ratio.py  merge_profiler_traces.py
(+148 files in other folders)
